# Trace

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  package-lock.json  package.json
.github/workflows/: ci.yml  pages.yml  release.yml
api/: openapi.yaml
apps/desktop/: package.json  serverConfig.test.ts  serverConfig.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/vscode-extension/: .vscodeignore  package.json  tsconfig.json  vite.webview.config.ts
apps/vscode-extension/media/: index.html
apps/vscode-extension/src/: extension.ts  openFile.test.ts  webviewHtml.ts
apps/web/: .env.example  package.json  vite.config.ts
apps/web/src/: main.tsx  vite-env.d.ts
crates/graph-engine/: Cargo.toml  README.md
crates/graph-indexer/: Cargo.toml  README.md
crates/graph-indexer/examples/: export_fixture.rs
crates/graph-indexer/src/: export.rs  language.rs  lib.rs  model.rs  store.rs  walk.rs
crates/graph-indexer/src/cfg/: mod.rs  python.rs
crates/graph-indexer/src/extract/: dart.rs  mod.rs  python.rs
crates/graph-indexer/src/framework/: actix.rs  django.rs  express.rs  fastapi.rs  flask.rs  flutter.rs  gin.rs  mod.rs  react.rs  spring.rs
crates/graph-indexer/src/resolve/: go.rs  java.rs  mod.rs  php.rs  python.rs  rust.rs  swift.rs  typescript.rs
crates/graph-indexer/tests/: fixtures.rs
crates/graph-server/: Cargo.toml
crates/graph-server/src/: hosted.rs  lib.rs  main.rs  mcp.rs
crates/graph-server/tests/: api_contract.rs  hosted.rs  mcp_parity.rs  overlay.rs
fixtures/django_routes/: urls.py
fixtures/express_routes/: README.md  server.ts
fixtures/flask_routes/: app.py
fixtures/flutter_trace/: README.md
fixtures/gin_routes/: README.md  main.go
fixtures/go_service/: README.md  helper.go
fixtures/java_spring/: HealthController.java  README.md
fixtures/otel_trace/: README.md  export.json
fixtures/php_simple/: README.md  helper.php  index.php
fixtures/python_branches/: README.md  main.py
fixtures/python_simple/: README.md  main.py  utils.py
fixtures/react_fastapi_trace/: README.md
fixtures/ruby_scripts/: README.md
fixtures/runtime_overlay/: README.md  observed.json
fixtures/rust_crate/: README.md
fixtures/swift_simple/: README.md  main.swift
fixtures/typescript_express/: README.md  index.ts  service.ts
fixtures/universal_mixed/: README.md  app.ts  main.py  server.go
fixtures/unknown_extensions/: README.md  notes.xyz
(+20 files in other folders)
