[package]
name = "graph-server"
version.workspace = true
edition.workspace = true
default-run = "graph-server"

[lib]
name = "graph_server"
path = "src/lib.rs"

[[bin]]
name = "graph-server"
path = "src/main.rs"

[[bin]]
name = "graph-mcp"
path = "src/bin/graph_mcp.rs"

[dependencies]
axum = "0.8"
graph-engine = { path = "../graph-engine" }
graph-indexer = { path = "../graph-indexer" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
tempfile = "3"

[dev-dependencies]
graph-indexer = { path = "../graph-indexer" }
http-body-util = "0.1"
hyper = "1"
tower = { version = "0.5", features = ["util"] }
urlencoding = "2"
