[package]
name = "graph-desktop"
version = "0.1.0"
description = "Graph desktop shell"
edition = "2021"

[lib]
name = "graph_desktop_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
# time 0.3.48 breaks blanket `From` impls in tauri-utils (and cookie).
# https://github.com/time-rs/time/issues/783 — remove pin once fixed upstream.
time = "=0.3.47"
